--- a/app/src/main/res/layout/fragment_story_builder_main.xml
+++ b/app/src/main/res/layout/fragment_story_builder_main.xml
@@ -1,4 +1,4 @@
-<android.support.design.widget.CoordinatorLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -60,4 +60,4 @@
         app:layout_anchor="@id/topView"
         app:layout_anchorGravity="bottom|right|end" />
 
-</android.support.design.widget.CoordinatorLayout>
+</RelativeLayout>
