--- a/app/src/main/res/layout/tool_bar.xml
+++ b/app/src/main/res/layout/tool_bar.xml
@@ -7,6 +7,6 @@
     android:layout_height="wrap_content"
     android:background="@color/ColorPrimary"
     android:elevation="4dp"
-    app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+    app:popupTheme="@style/Theme.AppCompat.Light.NoActionBar">
 
 </android.support.v7.widget.Toolbar>
