--- a/app/src/main/res/layout/tool_bar.xml
+++ b/app/src/main/res/layout/tool_bar.xml
@@ -7,6 +7,7 @@
     android:layout_height="wrap_content"
     android:background="@color/ColorPrimary"
     android:elevation="4dp"
-    app:popupTheme="@style/Theme.AppCompat.Light.NoActionBar">
+    android:theme="@style/ActionBarTheme"
+    app:popupTheme="@style/ActionBarPopupTheme">
 
 </android.support.v7.widget.Toolbar>
