--- a/app/src/main/res/layout/activity_story_builder_main.xml
+++ b/app/src/main/res/layout/activity_story_builder_main.xml
@@ -1,5 +1,4 @@
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/fragment"
     android:layout_width="match_parent"
@@ -34,18 +33,21 @@
                 android:layout_gravity="start"
                 android:gravity="center_vertical">
 
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-                </ImageView>
-
                 <ListView android:id="@+id/left_drawer"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:choiceMode="singleChoice"
                     android:divider="@android:color/transparent"
-                    android:dividerHeight="10dp"/>
+                    android:dividerHeight="10dp"
+                    android:background="@color/white"/>
             </LinearLayout>
+
+        <fragment
+            android:id="@id/fragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:name="tahastudio.storybuilder.StoryBuilderMainFragment"
+            tools:layout="@layout/fragment_story_builder_main" />
 
     </android.support.v4.widget.DrawerLayout>
 
