--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -2,4 +2,6 @@
 <resources>
             <color name="ColorPrimary">#FF5722</color>
             <color name="ColorPrimaryDark">#E64A19</color>
+            <color name="white">#FFFFFF</color>
+            <color name="black">#000000</color>
 </resources>
