--- a/app/src/main/res/layout/activity_story_builder_main.xml
+++ b/app/src/main/res/layout/activity_story_builder_main.xml
@@ -43,7 +43,7 @@
             </LinearLayout>
 
         <fragment
-            android:id="@id/fragment"
+            android:id="@+id/fragment_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:name="tahastudio.storybuilder.StoryBuilderMainFragment"
