--- a/app/src/main/res/layout/fragment_create_story.xml
+++ b/app/src/main/res/layout/fragment_create_story.xml
@@ -8,60 +8,71 @@
     tools:context="tahastudio.storybuilder.CreateStoryFragment">
 
     <include
-        layout="@layout/toolbar"></include>
-
-    <LinearLayout
-        android:id="@+id/story_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingBottom="50dp"
-        android:orientation="vertical" >
+        layout="@layout/toolbar" />
 
         <TextView
+            android:id="@+id/story_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:paddingBottom="20dp"
-            android:text="Title Your Story" />
+            android:text="Your Story Title Here"
+            android:paddingTop="20dp" />
 
-        <EditText
+        <TabHost
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/edit_title"
-            android:text="Add a title to your story" />
+            android:id="@+id/tab_add_elements">
 
-    </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-    <LinearLayout
-        android:id="@+id/add_elements"
-        android:layout_width="match_parent"
+            <TabWidget
+                android:id="@android:id/tabs"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+                <FrameLayout
+                    android:id="@android:id/tabcontent"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <LinearLayout
+                        android:id="@+id/add_characters"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical"
+                        android:focusable="true"
+                        android:clickable="true" />
+
+                    <LinearLayout
+                        android:id="@+id/add_plotline"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical"
+                        android:focusable="true"
+                        android:clickable="true" />
+
+                    <LinearLayout
+                        android:id="@+id/add_places"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical"
+                        android:focusable="true"
+                        android:clickable="true" />
+                </FrameLayout>
+            </LinearLayout>
+        </TabHost>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/second_fab"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:layout_above="@+id/story_title" >
-
-        <TextView
-            android:id="@+id/add_characters"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="20dp"
-            android:text="Characters" />
-
-        <TextView
-            android:id="@+id/add_plotline"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="20dp"
-            android:text="Plotline" />
-
-        <TextView
-            android:id="@+id/add_places"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="20dp"
-            android:text="Places" />
-
-
-    </LinearLayout>
+        android:layout_margin="20dp"
+        android:baselineAlignBottom="true"
+        android:clickable="true"
+        android:src="@drawable/ic_add_black_48dp" />
 
 </LinearLayout>
