--- a/app/src/main/res/layout/fragment_story_builder_main.xml
+++ b/app/src/main/res/layout/fragment_story_builder_main.xml
@@ -7,7 +7,7 @@
     tools:context=".StoryBuilderMain">
 
     <include
-        layout="@layout/toolbar"></include>
+        layout="@layout/toolbar" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -26,8 +26,8 @@
                 android:id="@+id/instructions"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
+                android:layout_weight="2"
                 android:gravity="center"
-                android:layout_weight="1"
                 android:text="@string/instructions" />
 
         </LinearLayout>
@@ -43,22 +43,21 @@
             <ListView
                 android:id="@+id/story_list"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
                 android:layout_gravity="center_vertical|center"
                 android:layout_weight="1" />
-
         </LinearLayout>
-
     </LinearLayout>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
         android:clickable="true"
         android:src="@drawable/ic_add_black_48dp"
-        app:layout_anchor="@id/topView"
-        app:layout_anchorGravity="bottom|right|end" />
+        app:layout_anchorGravity="bottom|right|end"
+        android:layout_margin="20dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true" />
 
 </RelativeLayout>
