--- a/app/src/main/res/layout/fragment_add_characters.xml
+++ b/app/src/main/res/layout/fragment_add_characters.xml
@@ -1,13 +1,15 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="tahastudio.storybuilder.AddCharacters">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
+        android:id="@+id/add_characters_tab"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="@string/hello_blank_fragment" />
 
-</FrameLayout>
+</RelativeLayout>
