--- a/app/src/main/res/layout/fragment_add_plotline.xml
+++ b/app/src/main/res/layout/fragment_add_plotline.xml
@@ -1,11 +1,13 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="tahastudio.storybuilder.AddPlotline">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
+        android:id="@+id/add_plotline_tab"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="@string/hello_blank_fragment" />
