--- a/app/src/main/res/layout/activity_create_story.xml
+++ b/app/src/main/res/layout/activity_create_story.xml
@@ -18,52 +18,15 @@
         android:text="Your Story Title Here"
         android:paddingTop="20dp" />
 
-    <TabHost
-        android:layout_width="match_parent"
+    <android.support.design.widget.TabLayout
+        android:id="@+id/tab_layout"
         android:layout_height="wrap_content"
-        android:id="@+id/tab_add_elements">
+        android:layout_width="match_parent" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <TabWidget
-                android:id="@android:id/tabs"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-            <FrameLayout
-                android:id="@android:id/tabcontent"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <LinearLayout
-                    android:id="@+id/add_characters"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    android:focusable="true"
-                    android:clickable="true" />
-
-                <LinearLayout
-                    android:id="@+id/add_plotline"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    android:focusable="true"
-                    android:clickable="true" />
-
-                <LinearLayout
-                    android:id="@+id/add_places"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    android:focusable="true"
-                    android:clickable="true" />
-            </FrameLayout>
-        </LinearLayout>
-    </TabHost>
+    <android.support.v4.view.ViewPager
+        android:id="@+id/pager"
+        android:layout_width="match_parent"
+        android:layout_height="fill_parent" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/second_fab"
