--- a/app/src/main/res/layout/activity_add_story.xml
+++ b/app/src/main/res/layout/activity_add_story.xml
@@ -7,11 +7,13 @@
     android:layout_height="wrap_content">
 
     <EditText
+        android:id="@+id/sb_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Title Your Story" />
 
     <EditText
+        android:id="@+id/sb_genre"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Genre" />
