--- a/app/src/main/res/layout/activity_add_story.xml
+++ b/app/src/main/res/layout/activity_add_story.xml
@@ -3,6 +3,7 @@
     android:id="@+id/add_story"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
+    android:padding="20dp"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
@@ -10,18 +11,24 @@
         android:id="@+id/sb_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Title Your Story" />
+        android:hint="Title Your Story" />
 
     <EditText
         android:id="@+id/sb_genre"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Genre" />
+        android:hint="Genre" />
+
+    <EditText
+        android:id="@+id/sb_notes"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="Synopsis/Notes" />
 
     <Button
         android:id="@+id/add_the_story"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Add" />
+        android:hint="Add" />
 
 </LinearLayout>
