--- a/app/src/main/res/layout/fragment_add_places.xml
+++ b/app/src/main/res/layout/fragment_add_places.xml
@@ -13,7 +13,7 @@
         android:layout_height="match_parent" />
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/second_fab"
+        android:id="@+id/add_place_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
