--- a/app/src/main/res/layout/activity_add_character.xml
+++ b/app/src/main/res/layout/activity_add_character.xml
@@ -24,7 +24,8 @@
         android:id="@+id/antagonist_character_checkbox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Main Antagonist" />
+        android:text="Main Antagonist"
+        android:onClick="mCharacterCheckbox" />
 
     <TextView
         android:layout_width="wrap_content"
