--- a/app/src/main/res/layout/activity_story_builder_main.xml
+++ b/app/src/main/res/layout/activity_story_builder_main.xml
@@ -1,54 +1,75 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/fragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:fitsSystemWindows="true">
+    tools:context=".StoryBuilderMain">
+
+    <include
+        layout="@layout/toolbar" />
 
     <android.support.v4.widget.DrawerLayout
         android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+    <FrameLayout
+        android:id="@+id/fragment_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-            <!-- Main layout -->
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
+    </FrameLayout>
 
-                <FrameLayout
-                    android:id="@+id/frame_container"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
-            </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-            <!-- Nav drawer -->
-            <LinearLayout
-                android:id="@id/drawer_layout"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="@dimen/abc_action_bar_default_height_material"
-                android:orientation="vertical"
-                android:layout_gravity="start"
-                android:gravity="center_vertical">
-
-                <ListView android:id="@+id/left_drawer"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:choiceMode="singleChoice"
-                    android:divider="@android:color/transparent"
-                    android:dividerHeight="5dp"
-                    android:background="@color/white"/>
-            </LinearLayout>
-
-        <fragment
-            android:id="@+id/fragment_layout"
+        <LinearLayout
+            android:id="@+id/topView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:name="tahastudio.storybuilder.StoryBuilderMainFragment"
-            tools:layout="@layout/fragment_story_builder_main" />
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:background="@android:color/holo_green_dark"
+            android:orientation="vertical">
 
-    </android.support.v4.widget.DrawerLayout>
+            <TextView
+                android:id="@+id/instructions"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="2"
+                android:gravity="center"
+                android:text="@string/instructions" />
 
-</LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/bottomView"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:background="@android:color/holo_blue_dark"
+            android:layout_weight="2"
+            android:orientation="vertical" >
+
+            <ListView
+                android:id="@+id/story_list"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:layout_gravity="center_vertical|center"
+                android:layout_weight="1" />
+        </LinearLayout>
+    </LinearLayout>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:src="@drawable/ic_add_black_48dp"
+        app:layout_anchorGravity="bottom|right|end"
+        android:layout_margin="20dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true" />
+
+</RelativeLayout>
