--- a/app/src/main/res/layout/fragment_story_builder_main.xml
+++ b/app/src/main/res/layout/fragment_story_builder_main.xml
@@ -28,6 +28,7 @@
         android:id="@+id/add_the_story"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:hint="Add" />
 
 </LinearLayout>
