--- a/app/src/main/res/layout/activity_story_builder_main.xml
+++ b/app/src/main/res/layout/activity_story_builder_main.xml
@@ -1,18 +1,15 @@
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <include
-        android:id="@+id/toolbar"
-        layout="@layout/toolbar" />
-
-    <RelativeLayout
+    <LinearLayout
         android:id="@+id/topview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/instructions"
@@ -24,17 +21,8 @@
             android:textStyle="bold"
             android:typeface="serif"
             android:visibility="visible"
-            android:padding="20dp" />
-
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:clickable="true"
-            android:src="@drawable/ic_add_black_48dp"
-            android:layout_alignBottom="@+id/fragment_container"
-            android:layout_alignRight="@+id/fragment_container"
-            android:layout_margin="20dp" />
+            android:padding="20dp"
+            android:layout_marginTop="55dp" />
 
         <fragment
             android:id="@+id/fragment_container"
@@ -42,11 +30,28 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:layout="@layout/bottom_view" />
-    </RelativeLayout>
+
+    </LinearLayout>
+
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:src="@drawable/ic_add_black_48dp"
+        android:layout_margin="20dp"
+        android:baselineAlignBottom="false"
+        android:layout_alignParentEnd="false"
+        android:layout_alignBottom="@+id/topview"
+        android:layout_alignRight="@+id/topview" />
 
     <android.support.v4.widget.DrawerLayout
         android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-</LinearLayout>
+</RelativeLayout>
