--- a/app/src/main/res/layout/fragment_sbdialog.xml
+++ b/app/src/main/res/layout/fragment_sbdialog.xml
@@ -1,10 +1,10 @@
 <LinearLayout
     android:id="@+id/add_story"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:padding="20dp"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <EditText
         android:id="@+id/sb_title"
@@ -24,11 +24,5 @@
         android:layout_height="wrap_content"
         android:hint="Synopsis/Notes" />
 
-    <Button
-        android:id="@+id/add_the_story"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:hint="Add" />
 
 </LinearLayout>
