Add in fragments

--- a/app/src/main/res/layout/activity_add_plotline.xml
+++ b/app/src/main/res/layout/activity_add_plotline.xml
@@ -37,6 +37,6 @@
         android:id="@+id/add_the_plotline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:hint="Add" />
+        android:text="Add" />
 
 </LinearLayout>
