--- a/app/src/main/res/layout/activity_add_character.xml
+++ b/app/src/main/res/layout/activity_add_character.xml
@@ -87,6 +87,6 @@
         android:id="@+id/add_the_character"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:hint="Add" />
+        android:text="Add" />
 
 </LinearLayout>
