--- a/app/src/main/res/layout/activity_add_place.xml
+++ b/app/src/main/res/layout/activity_add_place.xml
@@ -35,6 +35,6 @@
         android:id="@+id/add_the_place"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:hint="Add" />
+        android:text="Add" />
 
 </LinearLayout>
