--- a/app/src/main/res/layout/activity_create_story.xml
+++ b/app/src/main/res/layout/activity_create_story.xml
@@ -7,6 +7,7 @@
     tools:context="tahastudio.storybuilder.CreateStory">
 
     <include
+        android:id="@+id/toolbar"
         layout="@layout/toolbar" />
 
     <TextView
