--- a/app/src/main/res/layout/activity_create_story.xml
+++ b/app/src/main/res/layout/activity_create_story.xml
@@ -29,13 +29,35 @@
         android:layout_width="match_parent"
         android:layout_height="fill_parent" />
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/add_character_fab"
+    <com.getbase.floatingactionbutton.FloatingActionsMenu
+        android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:clickable="true"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true" />
+        android:layout_marginBottom="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginEnd="16dp">
+
+        <com.getbase.floatingactionbutton.FloatingActionButton
+            android:id="@+id/characters"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:title="Add a Character" />
+
+        <com.getbase.floatingactionbutton.FloatingActionButton
+            android:id="@+id/places"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:title="Add a Place" />
+
+        <com.getbase.floatingactionbutton.FloatingActionButton
+            android:id="@+id/plots"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:title="Add a Plotline" />
+
+    </com.getbase.floatingactionbutton.FloatingActionsMenu>
 
 </RelativeLayout>
