Fix up db queries

--- a/app/src/main/res/layout/fragment_add_characters.xml
+++ b/app/src/main/res/layout/fragment_add_characters.xml
@@ -8,8 +8,8 @@
     tools:context="tahastudio.storybuilder.AddCharacters">
 
     <ListView
-        android:id="@+id/add_characters_list"
+        android:id="@+id/characters_listview"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-</RelativeLayout>
+    </RelativeLayout>
