--- a/app/src/main/res/layout/activity_add_character.xml
+++ b/app/src/main/res/layout/activity_add_character.xml
@@ -4,35 +4,59 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:padding="20dp"
+    android:background="@color/white"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent">
 
-    <EditText
-        android:id="@+id/sb_character_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:hint="Name" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <CheckBox
-        android:id="@+id/main_character_checkbox"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Main Character" />
+        <EditText
+            android:id="@+id/sb_character_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="Name" />
 
-    <CheckBox
-        android:id="@+id/antagonist_character_checkbox"
+        <EditText
+            android:id="@+id/sb_character_age"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="Age"
+            android:layout_alignParentEnd="true" />
+    </RelativeLayout>
+
+    <RelativeLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Main Antagonist" />
+        android:layout_height="wrap_content">
+
+        <CheckBox
+            android:id="@+id/main_character_checkbox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Main Character" />
+
+        <CheckBox
+            android:id="@+id/antagonist_character_checkbox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Main Antagonist"
+            android:layout_gravity="right"
+            android:layout_toEndOf="@id/main_character_checkbox" />
+
+    </RelativeLayout>
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Gender" />
+            android:id="@+id/character_gender_textview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Gender" />
+
 
     <LinearLayout
+        android:id="@+id/gender"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="horizontal" >
 
         <RadioButton
@@ -45,20 +69,17 @@
             android:id="@+id/female_gender"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignEnd="@id/male_gender"
             android:text="Female" />
 
         <RadioButton
             android:id="@+id/other_gender"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignEnd="@id/female_gender"
             android:text="Other" />
     </LinearLayout>
 
-    <EditText
-        android:id="@+id/sb_character_age"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:hint="Age" />
 
     <EditText
         android:id="@+id/sb_character_birthplace"
@@ -70,18 +91,21 @@
         android:id="@+id/sb_character_personality"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@id/sb_character_birthplace"
         android:hint="Personality" />
 
     <EditText
         android:id="@+id/sb_character_notes"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/sb_character_personality"
         android:hint="Notes" />
 
     <Button
         android:id="@+id/add_the_character"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/sb_character_notes"
         android:text="Add" />
 
 </LinearLayout>
