--- a/app/src/main/res/layout/activity_add_plotline.xml
+++ b/app/src/main/res/layout/activity_add_plotline.xml
@@ -1,29 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     android:id="@+id/add_plotline"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:padding="20dp"
+    android:background="@color/white"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal" >
+    <CheckBox
+        android:id="@+id/main_plot_checkbox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Main plotline" />
 
-        <CheckBox
-            android:id="@+id/main_plot_checkbox"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Main plotline" />
-
-    </LinearLayout>
 
     <EditText
         android:id="@+id/sb_plotline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/main_plot_checkbox"
         android:hint="Describe the plot here" />
 
 
@@ -31,12 +27,14 @@
         android:id="@+id/sb_plotline_notes"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/sb_plotline"
         android:hint="Notes" />
 
     <Button
         android:id="@+id/add_the_plotline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/sb_plotline_notes"
         android:text="Add" />
 
-</LinearLayout>
+</RelativeLayout>
