--- a/app/src/main/res/layout/fragment_add_places.xml
+++ b/app/src/main/res/layout/fragment_add_places.xml
@@ -8,7 +8,7 @@
     tools:context="tahastudio.storybuilder.AddPlaces">
 
     <ListView
-        android:id="@+id/add_places_list"
+        android:id="@+id/places_listview"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
