--- a/app/src/main/res/layout/fragment_add_plotline.xml
+++ b/app/src/main/res/layout/fragment_add_plotline.xml
@@ -8,7 +8,7 @@
     tools:context="tahastudio.storybuilder.AddPlotline">
 
     <ListView
-        android:id="@+id/add_plotline_list"
+        android:id="@+id/plotline_listview"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
