--- a/app/src/main/res/layout/fragment_add_characters.xml
+++ b/app/src/main/res/layout/fragment_add_characters.xml
@@ -10,6 +10,7 @@
     <ListView
         android:id="@+id/characters_listview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        style="@style/ListViewTheme" />
 
     </RelativeLayout>
