--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -1,7 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-            <color name="ColorPrimary">#FF5722</color>
-            <color name="ColorPrimaryDark">#E64A19</color>
-            <color name="white">#FFFFFF</color>
-            <color name="black">#000000</color>
+    <!-- Color schemes: http://www.google.com/design/spec/style/color.html#color-color-palette -->
+    <!-- In use: Indigo and Green -->
+    <color name="ColorPrimary">#1B5E20</color>
+    <color name="ColorPrimaryDark">#3F51B5</color>
+    <color name="colorPrimaryAccent">#43A047</color>
+    <color name="colorUpperBackground">#4CAF50</color>
+    <color name="colorLowerBackground">#E8F5E9</color>
+    <color name="colorPopUp">#3949AB</color>
+    <color name="colorPopupText">#d0d0d0</color>
+    <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
 </resources>
