Change directory structure

--- a/app/src/main/res/layout/fragment_add_places.xml
+++ b/app/src/main/res/layout/fragment_add_places.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="tahastudio.storybuilder.AddPlaces">
+    tools:context=".fragments.AddPlaces">
 
     <ListView
         android:id="@+id/places_listview"
