--- a/app/src/main/res/layout/fragment_add_characters.xml
+++ b/app/src/main/res/layout/fragment_add_characters.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="tahastudio.storybuilder.AddCharacters">
+    tools:context=".fragments.AddCharacters">
 
     <ListView
         android:id="@+id/characters_listview"
