--- a/app/src/main/res/layout/activity_story_builder_main.xml
+++ b/app/src/main/res/layout/activity_story_builder_main.xml
@@ -17,7 +17,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:background="@color/colorUpperBackground"
-        android:padding="40dp"
+        android:padding="30dp"
         android:layout_below="@+id/toolbar" />
 
     <ListView
@@ -29,9 +29,9 @@
     <TextView
         android:id="@+id/empty"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:gravity="center"
-        android:text="Nothing Here Yet"
+        android:text="@string/empty"
         android:layout_below="@id/quote" />
 
     <!--<android.support.v4.widget.DrawerLayout
@@ -49,5 +49,4 @@
         android:layout_margin="20dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true" />
-
 </RelativeLayout>
